--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,3 @@
 {
-  "presets": [
-    ["env", {
-      "modules": false
-    }]
-  ],
-  "plugins": [
-    "transform-object-assign",
-    "external-helpers"
-  ]
+  "presets": ["@babel/preset-env"]
 }
