--- a/package.json
+++ b/package.json
@@ -1,59 +1,36 @@
 {
-  "name": "aos",
-  "version": "3.0.0-beta.6",
-  "description": "Animate on scroll library",
-  "homepage": "https://michalsnik.github.io/aos/",
-  "author": "Michał Sajnóg <michal.sajnog@hotmail.com>",
-  "license": "MIT",
-  "main": "dist/aos.cjs.js",
-  "module": "dist/aos.esm.js",
-  "browser": "dist/aos.js",
+  "name": "simple-aos",
+  "version": "1.0.0",
+  "description": "Simple AOS - Animate on scroll library",
+  "main": "dist/aos.js",
+  "scripts": {
+    "build": "webpack"
+  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/michalsnik/aos.git"
+    "url": "git+https://github.com/ammannbe/aos.git"
   },
+  "keywords": [
+    "aos",
+    "animate on scroll"
+  ],
+  "author": "Benjamin Ammann",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/michalsnik/aos/issues"
+    "url": "https://github.com/ammannbe/aos/issues"
   },
+  "homepage": "https://github.com/ammannbe/aos#readme",
   "devDependencies": {
-    "autoprefixer": "^8.4.1",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.3",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-plugin-transform-object-assign": "^6.22.0",
-    "babel-preset-env": "^1.7.0",
-    "cssnano": "^3.10.0",
-    "cypress": "^2.1.0",
-    "eslint": "^4.19.1",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-prettier": "^2.6.0",
-    "live-server": "tapio/live-server#master",
-    "node-sass": "^4.9.0",
-    "npm-run-all": "^4.1.3",
-    "rollup": "^0.58.2",
-    "rollup-plugin-babel": "^3.0.4",
-    "rollup-plugin-commonjs": "^9.1.3",
-    "rollup-plugin-node-resolve": "^3.3.0",
-    "rollup-plugin-postcss": "^1.6.1",
-    "rollup-plugin-uglify": "^3.0.0"
-  },
-  "dependencies": {
-    "classlist-polyfill": "^1.2.0",
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.6",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^6.3.0",
     "lodash.debounce": "^4.0.8",
-    "lodash.throttle": "^4.1.1"
-  },
-  "scripts": {
-    "build": "NODE_ENV=production rollup -c",
-    "watch": "NODE_ENV=dev rollup -c -w",
-    "serve": "node ./scripts/start-server.js",
-    "dev": "npm-run-all --parallel serve watch",
-    "test": "yarn lint && NODE_ENV=test node ./scripts/run-cypress-tests.js",
-    "test:dev": "cypress open",
-    "lint": "eslint src cypress demo scripts",
-    "prepare": "npm run build"
-  },
-  "files": [
-    "dist",
-    "src"
-  ]
+    "lodash.throttle": "^4.1.1",
+    "sass": "^1.42.1",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.3.0",
+    "webpack": "^5.57.1",
+    "webpack-cli": "^4.8.0"
+  }
 }
